test: 태그 멤버 기능 테스트 코드 작성